2006-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-split-reg.c: Mark string for translation as
	pointed out by Andreas Köhler.

2006-04-22  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Fix a null pointer
	dereference.  Don't make the Close button sensitive until a page
	has been added. Fixes #339372.

	* src/pixmaps/Makefile.am:
	* src/gnome-utils/gnc-icons.c: Rename some icon files.

2006-04-21  David Hampton  <hampton@employees.org>

	* src/pixmaps/Makefile.am:
	* src/business/business-gnome/gnc-plugin-page-invoice.c:
	* src/gnome-utils/gnc-icons.[ch]:
	* src/gnome/gnc-plugin-page-register.c: Add new icons for
	invoices, adding a scheduled transaction, and the jump action.
	Fixes #339112.

	* src/import-export/log-replay/gnc-log-replay.c:
	* src/engine/TransLog.[ch]: Don't allow the user to open the
	current log file.  This only produces a debug message because of
	the string freeze.  Fixes #337211.  Also add a filter for '*.log'
	to the file selection dialog.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/gnome-utils/gnc-main-window.c: Don't allow a report page to
	be closed of it is in the process of reloading.  Make the close
	buttons on the notebook tabs insensitive when the rest of the UI
	is insensitive. Fixes 339327.

	* src/report/utility-reports/welcome-to-gnucash.scm:
	* src/report/report-gnome/report-gnome.scm: Make the "Welcome to
	GnuCash" report menu item build the entire report, instead of just
	the first sub-report.

	* src/report/report-system/report.scm:
	* src/report/report-system/report-system.scm:
	* src/report/report-gnome/gnc-plugin-page-report.c: Correctly save
	and restore multicolumn reports. Fixes 327627.

	* src/report/report-system/html-document.scm: Don't complain about
	reports without html titles.  This occurs for every embedded
	report.

	* src/gnome/glade/reconcile.glade: Remove translatable flag from a